# boil-change-IP

./: .gitignore  Cargo.toml  README.md  change-ip.sh  config.env.example  install.sh  tg-bot.sh
.github/workflows/: release.yml
src/: boil.rs  bot.rs  cli.rs  config.rs  core.rs  main.rs  streaming.rs  timer.rs
