[package]
name = "redial"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "redial"
path = "src/main.rs"

[dependencies]
tokio       = { version = "1",    features = ["full"] }
reqwest     = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls"] }
serde       = { version = "1",    features = ["derive"] }
serde_json  = "1"
dotenvy     = "0.15"
teloxide    = { version = "0.12", default-features = false, features = ["macros", "rustls", "ctrlc_handler"] }
anyhow      = "1"
dialoguer   = "0.11"
env_logger  = "0.11"
log         = "0.4"

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
strip         = true
